Closed
Bug 1652406
Opened 5 years ago
Closed 5 years ago
Crash in [@ gfxUserFontSet::UserFontCache::Entry::KeyEquals]
Categories
(Core :: Graphics: Text, defect)
Core
Graphics: Text
Tracking
()
RESOLVED
FIXED
mozilla80
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | + | fixed |
People
(Reporter: gsvelto, Assigned: xeonchen)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-d42640c9-7f8b-48ef-9aac-d91790200712.
Top 10 frames of crashing thread:
0 xul.dll gfxUserFontSet::UserFontCache::Entry::KeyEquals const gfx/thebes/gfxUserFontSet.cpp:1107
1 xul.dll PLDHashTable::Search const xpcom/ds/PLDHashTable.cpp:496
2 xul.dll static gfxUserFontSet::UserFontCache::GetFont gfx/thebes/gfxUserFontSet.cpp:1216
3 xul.dll gfxUserFontEntry::DoLoadNextSrc gfx/thebes/gfxUserFontSet.cpp:457
4 xul.dll gfxFontGroup::GetFirstValidFont gfx/thebes/gfxTextRun.cpp:2131
5 xul.dll gfxFontGroup::InitScriptRun<unsigned char> gfx/thebes/gfxTextRun.cpp:2544
6 xul.dll gfxFontGroup::InitTextRun<unsigned char> gfx/thebes/gfxTextRun.cpp:2438
7 xul.dll gfxFontGroup::MakeTextRun gfx/thebes/gfxTextRun.cpp:2328
8 xul.dll BuildTextRunsScanner::BuildTextRunForFrames layout/generic/nsTextFrame.cpp:2552
9 xul.dll BuildTextRunsScanner::FlushFrames layout/generic/nsTextFrame.cpp:1648
This seems to have started with buildid 20200710215204. We have crash reports on file both for Linux and Windows in 32- and 64-bit flavors.
Comment 1•5 years ago
|
||
This looks like it might be related to bug 1647732, which landed about then.
Flags: needinfo?(xeonchen)
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → xeonchen
Flags: needinfo?(xeonchen)
Assignee | ||
Comment 2•5 years ago
|
||
Pushed by xeonchen@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/54c59c563b98
add private flag back and remove the assertion; r=jfkthame
Updated•5 years ago
|
status-firefox78:
--- → unaffected
status-firefox79:
--- → unaffected
status-firefox80:
--- → affected
status-firefox-esr78:
--- → unaffected
tracking-firefox80:
--- → +
Keywords: regression
Comment 5•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Updated•5 years ago
|
status-firefox-esr68:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•