Bug 1652406 - add private flag back and remove the assertion; r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D83297